tests/jastadd/negative/type_errors/L3/5_ConstDecl2.ob
MODULE TestModule;
	TYPE int = INTEGER;

	PROCEDURE f();
		CONST C3 = 2 * int;
	END f;
END TestModule.
